[gd_scene load_steps=2 format=3 uid="uid://drbywswx5p5jt"]

[ext_resource type="Script" path="res://Scripts/StartMenu.gd" id="1_xckv1"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xckv1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Turn Based Game"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="CombatTestButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Combat Test"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MenuButtons/CombatTestButton" to="." method="_on_combat_test_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
